Fix a11y issue 03' about overlapping text when forcing more extra text spacing for civio/presupuesto-management#1126

--- a/budget_app/static/stylesheets/_budgets.scss
+++ b/budget_app/static/stylesheets/_budgets.scss
@@ -67,7 +67,7 @@
   }
 
   .data-controllers{
-    margin-top: -$grid-gutter-width/3;
+    margin-top: $grid-gutter-width/2;
   }
 }
 
